--- a/index.html
+++ b/index.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Layouting #1</title>
 
   <!-- CSS -->
-   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <nav>
-    
-  </nav>
+  <!-- navbar -->
+  <header>
+    <h4>Ini navbar</h4>
+  </header>
+
+  <!-- Main content -->
+  <main>
+
+    <!-- gambar -->
+    <section class="gambar">
+      gambar
+    </section>
+
+    <!-- tabs/bebas -->
+    <section class="contents">
+      <input type="text"><button>Send</button>
+    </section>
+  </main>
+
+  <!-- footer -->
+  <footer>
+    <h4>[ Hooh ]</h4>
+  </footer>
 </body>
+
 </html>
