--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
 
     <!-- tabs/bebas -->
     <section class="contents">
-      <input type="text"><button>Send</button>
+      <input type="text" placeholder="Username"><button>Send</button>
+      <input type="text" placeholder="Email"><button>Send</button>
+      <input type="Password" placeholder="Password"><button>Send</button>
+      <input type="text" placeholder="Nomor Telepon"><button>Send</button>
+      <input type="text" placeholder="Alamat"><button>Send</button>
     </section>
   </main>
 
